2005-11-21  Andrew Cagney  <cagney@redhat.com>

	* Proc.java (performTaskAttachCompleted(Task,Task)): Add
	* ProcState.java: Handle performTaskAttachCompleted.
	* TaskState.java: In .detaching, when a clone, notify owning
	process of the clone Task.  Replace .initial with .mainState,
	.unattachedState, and .clonedState.  Replace .Stating states with
	.Start states.  Simplify.
	* Task.java: Update.
	
	* TaskState.java: Delete transition from detaching to
	detachingInSyscall.

	* TestTaskClonedObserver.java: Delete testBlockingTaskCloneObserver.
	* TestTaskForkedObserver.java: Delete testBlockingTaskForkObserver
	* TestTaskObserverBlocked.java: Add .testBlockingFibonacciFork,
	and testBlockingFibonacciClone.
	
	* TestTaskObserverBlocked.java: New.
	* TestTaskObserver.java: Move .testGetBlockers, .SpawnObserver,
	.CloneObserver, .ForkObserver, .testBlockedForkUnblockChildFirst,
	.testBlockedForkUnblockParentFirst,
	testBlockedCloneUnblockChildFirst,
	testBlockedCloneUnblockParentFirst to TestTaskObserverBlocked.

	* TaskState.java: In .detaching state, handle PerformForked,
	PerformCloned, PerformExeced, PerformSignaled.
	* TestTaskObserverDetach.java: New file.

2005-11-20  Andrew Cagney  <cagney@redhat.com>

	* TestTaskObserver.java: Add class .CloneObserver.  Add tests
	.testBlockedForkUnblockChildFirst, and
	.testBlockedForkUnblockParentFirst.
	
	* TestTaskObserver.java: Add classes .SpawnObserver, and
	.CloneObserver.  Add tests .testBlockedCloneUnblockChildFirst, and
	.testBlockedCloneUnblockParentFirst.
	* TaskObserver.java: Note that Cloned and Forked will block both
	the parent and child.

	* TestLib.java: Add constants childAck, parentAck, addCloneSig,
	delCloneSig, addForkSig, delForkSig, zombieForkSig, execSig to
	AckProcess.  Use.
	
	* TestLib.java: Add exec method.

	* TaskState.java: Replace state .startRunning with class .Starting
	containing sub-states .waitingForStop and .waitingForUnblock.