@@ -1,5 +1,7 @@
 2005-11-21  Andrew Cagney  <cagney@redhat.com>
 
+	* TaskState.java: Handle PerformTrapped.
+	
 	* Proc.java (performTaskAttachCompleted(Task,Task)): Add
 	* ProcState.java: Handle performTaskAttachCompleted.
 	* TaskState.java: In .detaching, when a clone, notify owning
